force-app/main/default/objects/Zoom_Event_Info__c/Zoom_Event_Info__c.object-meta.xml
<CustomObject>
    <description>Object for tracking information zoom user behavoirs</description>
    <label>Zoom Event Info</label>
    <nameField>
        <label>Zoom Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoom Event Infos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>