force-app/main/default/objects/Zoom_Event_Info__c/fields/Log_In__c.field-meta.xml
<CustomField>
    <fullName>Log_In__c</fullName>
    <label>Log In</label>
    <type>DateTime</type>
</CustomField>