force-app/main/default/objects/Zoom_Event_Info__c/fields/Presence_status_time__c.field-meta.xml
<CustomField>
    <fullName>Presence_status_time__c</fullName>
    <label>Presence Status Time</label>
    <type>DateTime</type>
</CustomField>